--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "awilix": "^12.0.5",
+    "awilix-express": "^9.0.2",
     "express": "^5.1.0"
   },
   "devDependencies": {
