--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Environment variables
 .env
 .env.*
-!.env.example
+!.env.sample
 
 # Dependencies
 /node_modules
@@ -14,3 +14,8 @@
 
 # Test coverage
 /coverage
+
+# Database files
+*.sqlite
+*.sqlite3
+*.db
