--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "tsx --watch --env-file .env src/index.ts",
     "start": "node dist/index.js",
+    "seed": "tsx src/seed.ts",
     "type-check": "tsc --noEmit",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
@@ -35,9 +36,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/sequelize": "^6.12.0",
     "awilix": "^12.0.5",
     "awilix-express": "^9.0.2",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
