--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/redis": "^4.0.11",
     "@types/sequelize": "^6.12.0",
     "awilix": "^12.0.5",
     "awilix-express": "^9.0.2",
     "express": "^5.1.0",
+    "redis": "^5.8.0",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
     "zod": "^4.0.15"
