--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "tsx --watch --env-file .env src/index.ts",
     "start": "node dist/index.js",
-    "seed": "tsx src/seed.ts",
+    "monitor": "tsx --env-file .env src/monitoring/monitor.ts",
     "type-check": "tsc --noEmit",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
@@ -40,7 +40,10 @@
     "@types/sequelize": "^6.12.0",
     "awilix": "^12.0.5",
     "awilix-express": "^9.0.2",
+    "axios": "^1.7.9",
+    "ethers": "^5.7.0",
     "express": "^5.1.0",
+    "lodash": "^4.17.21",
     "redis": "^5.8.0",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
@@ -50,6 +53,7 @@
     "@eslint/js": "^9.32.0",
     "@tsconfig/node22": "^22.0.2",
     "@types/express": "^5.0.3",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^24.2.0",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/eslint-plugin": "^1.3.4",
