--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ethers": "^5.7.0",
     "express": "^5.1.0",
     "lodash": "^4.17.21",
+    "mysql2": "^3.14.3",
     "redis": "^5.8.0",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
