fix worker block delay

--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,14 @@
 PORT=3000
+NODE_ENV=development
+API_BASE_URL=http://localhost:3000
+INFURA_PROJECT_ID=2848050247e74a1c89ede6d0bf9ce1d1
+
+DB_HOST=localhost
+DB_PORT=3306
+DB_USER=test_user
+DB_PASSWORD=test_password
+DB_NAME=test_db
+
+REDIS_URL="redis://localhost:6379"
+
+VERBOSE_LOGGING=true
